<resources>
    <string name="app_name">EverlastingStory</string>
    <string name="bookView_mockup_bookText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed fringilla est. Curabitur dictum est dolor, nec laoreet mauris malesuada eu. Donec suscipit nunc nisl, nec lobortis tellus consectetur luctus. Morbi a ligula a eros vestibulum tincidunt non ac tellus. Nulla nec neque dolor. Praesent sit amet ligula vulputate, semper nisi vitae, malesuada sem. Suspendisse at justo mattis, eleifend leo at, eleifend nisl. Pellentesque faucibus, est sit amet feugiat accumsan, ipsum justo dictum tortor, sed dapibus dui nunc non nisi. Sed auctor nunc id mi porttitor, porta dignissim quam blandit. Donec eu arcu in sapien ultrices tristique. Ut porta condimentum pharetra. Duis hendrerit sagittis nunc quis scelerisque. Maecenas in vulputate augue. Suspendisse sodales justo luctus pretium luctus. Phasellus bibendum nisl in bibendum ornare. Mauris fringilla nulla a eros lobortis ornare. Sed non elementum massa. Pellentesque elit turpis, fringilla eget enim sit amet, molestie lobortis arcu. Curabitur in mi arcu. Nam et suscipit purus, non consectetur diam. Ut vestibulum nulla laoreet massa fringilla scelerisque.Duis id cursus arcu, non pulvinar urna. Quisque id lectus quis eros fermentum venenatis. Fusce a libero magna. Vestibulum placerat venenatis imperdiet. Sed imperdiet imperdiet blandit. Praesent suscipit lacinia ipsum id gravida. Ut tristique nisl et vulputate posuere.Vivamus euismod ipsum justo, eu euismod metus rhoncus sit amet. Vestibulum consectetur tincidunt consequat. Vestibulum dictum consequat tortor a tempus. In ut urna id odio auctor dignissim. Sed semper sollicitudin dictum. Suspendisse suscipit dolor a augue luctus bibendum. Donec tincidunt ligula et turpis elementum iaculis. Pellentesque pretium rhoncus libero, at tempus turpis.</string>
    <string name="bookView_action_final_addition">Chapter is finalized/locked</string>
    <string name="bookView_action_add_chapter">Add Chapter</string>
    <string name="bookView_action_add_paragraph">Add Paragraph</string>
    <string name="bookView_action_add_image">Add Image</string>
    <string name="bookView_dialog_btnTxt_before">Add Before</string>
    <string name="bookView_dialog_btnTxt_after">Add After</string>
    <string name="bookView_dialog_tv">Choose to add a new chapter before or after \n Chapter</string>
    <string name="bookView_spinner_text">Loading chapters... \n Please wait</string>
    <string name="bookView_dialog_isFinished">This chapter is finalized. \n Please select another one.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contribution_submit">Are you sure you want to submit?</string>
    <string name="contribution_addTextChapter">Add title and text to your new chapter !</string>
    <string name="contribution_addTextParagraph">Add text to your new paragraph</string>
    <string name="contribution_final_contribution">Finish chapter?</string>
    <string name="contribution_addTextTitle">"Write a title!"</string>

    <string name="overview_pages">Pages:</string>
    <string name="overview_table_of_contents">Table of Contents</string>
    <string name="overview_read_book">To the book!</string>
    <string name="overview_row_chapter">Chapter</string>
    <string name="overview_contributors_description">Image for contributor count</string>
    <string name="overview_chapter_row_lock_description">Icon indicating that chapter is locked for further contribution</string>
    <string name="overview_spinner_text">Loading content... \n Please wait</string>

    <string name="overview_test_about">A murder in Paris\' Louvre Museum and cryptic clues in some of Leonardo da Vinci\'s most famous paintings lead to the discovery of a religious mystery. For 2,000 years a secret society closely guards information that -- should it come to light -- could rock the very foundations of Christianity.</string>
    <string name="overview_test_contributor_count">58</string>
    <string name="overview_test_title">Pocahontas</string>
    <string name="overview_test_page_count">111</string>
    <string name="overview_test_row_id">1</string>
    <string name="overview_test_row_name">Jungle boogie</string>

    <string name="home_tv_archived">Archived Books</string>
    <string name="home_tv_archived_info">Drag the carousel to see archived books</string>
    <string name="home_tv_onImage">Click me!</string>


</resources>
