<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    >

    <TextView
        android:id="@+id/tv_submit_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_title"
        android:textStyle="italic"
        android:text="@string/contribution_submit"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_submit_dialog_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/size_book_content"
        android:textStyle="italic"
        android:gravity="center"
        android:text="@string/yes"
        android:layout_below="@+id/cb_final_contribution"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btn_submit_dialog_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_submit_dialog_yes"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/btn_submit_dialog_yes"
        android:layout_toRightOf="@+id/btn_submit_dialog_yes"
        android:textSize="@dimen/size_book_content"
        android:textStyle="italic"
        android:gravity="center"
        android:text="@string/no"/>

    <CheckBox
        android:id="@+id/cb_final_contribution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_submit_dialog"
        android:text="@string/contribution_final_contribution"
        android:visibility="visible"/>
</RelativeLayout>