<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tyolani.everlastingstorypro.HomeActivity">


    <ImageView
        android:id="@+id/iv_home_imageButton"
        android:paddingTop="12dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="96dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/ImageViewText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/iv_home_imageButton"
        android:layout_alignTop="@id/iv_home_imageButton"
        android:layout_alignRight="@id/iv_home_imageButton"
        android:layout_alignBottom="@id/iv_home_imageButton"
        android:gravity="center"
        android:textSize="@dimen/size_book_content"
        android:text="@string/home_tv_onImage"
    />

    <TextView
        android:id="@+id/tv_home_bookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_marginTop="76dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_home_bookGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="14dp"
        android:layout_alignBottom="@+id/tv_home_bookTitle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_home_numberContributors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="@dimen/size_book_content"
        android:layout_below="@+id/iv_home_imageButton"
        android:layout_toStartOf="@+id/iv_home_personImage"
        android:layout_toLeftOf="@+id/iv_home_personImage"
        android:layout_marginEnd="@dimen/size_margin_offset"
        android:layout_marginRight="@dimen/size_margin_offset"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="36dp"
        android:layout_marginStart="36dp" />

    <ImageView
        android:id="@+id/iv_home_personImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:srcCompat="@mipmap/ic_contributor"
        android:layout_below="@+id/iv_home_imageButton"
        android:layout_toRightOf="@+id/tv_home_bookGenre"
        android:layout_toEndOf="@+id/tv_home_bookGenre" />

    <in.goodiebag.carouselpicker.CarouselPicker
        android:id="@+id/carouselPicker1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_home_personImage"
        app:items_visible="three"
        />

    <TextView
        android:id="@+id/tv_home_archived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_tv_archived"
        android:textSize="@dimen/size_title"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginBottom="34dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/tv_home_archived_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/home_tv_archived_info"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="@dimen/size_book_content"
        android:textAlignment="center"
        android:gravity="center"/>

</RelativeLayout>
